revised unit-test for symbol parsing and market-data-file reading